--- a/templates/layouts/admin-default.jade
+++ b/templates/layouts/admin-default.jade
@@ -5,7 +5,7 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     // The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags
-    title #{title}
+    title DPITC
 
     // Bootstrap
     link(href='/styles/bootstrap/bootstrap.min.css', rel='stylesheet')
