--- a/templates/views/admin/user_profile.jade
+++ b/templates/views/admin/user_profile.jade
@@ -8,19 +8,19 @@ block content
         br
         form.form-group.row(method="post")
             //-input(type='hidden', name= 'action', value='editProfile')
-            form.form-group.row
-                div.col-md-3               
+            .row
+                .col-md-3               
                     label First Name :
                     input.form-control(type='text', value= data.user.name.first, placeholder='First name')
-                div.col-md-4
+                .col-md-4
                     label Last Name :    
                     input.form-control(type='text', value= data.user.name.last, placeholder='Last name')
-            form.form-group.row
-                div.col-md-7
+            .row
+                .col-md-7
                     label Email :
                     input.form-control(type='text', value= data.user.email, placeholder='Email')
-            form.form-group.row
-                div.col-md-5
+            .row
+                .col-md-5
                     label Password :
                     button.btn.btn-primary(type='submit') Change Password
             label.custom-file Photo :
@@ -28,8 +28,8 @@ block content
                 span.custom-file-control
             
             h3 Elearning
-            form.form-group.row
-                div.col-md-7
+            .row
+                .col-md-7
                     label Learning Objects Taken
                     select.form-control
                         if data.user.learningObjectsTaken
@@ -38,72 +38,72 @@ block content
                             option(selected='') Select...
                         each lo,i in data.learning_objects
                             option(value=i) #{lo.title}
-            form.form-group.row
-                div.col-md-7
+            .row
+                .col-md-7
                     h4 Location
                     label Street Address
                     input.form-control(type='text', value= data.user.location.street1, placeholder='Street Address')
-            form.form-group.row
-                div.col-md-4
+            .row
+                .col-md-4
                     label Suburb
                     input.form-control(type='text', value= data.user.location.suburb, placeholder='Suburb')
-                div.col-md-3
+                .col-md-3
                     label State
                     input.form-control(type='text', value= data.user.location.state, placeholder='State')
-            form.form-group.row
-                div.col-md-3
+            .row
+                .col-md-3
                     label Postcode
                     input.form-control(type='text', value= data.user.location.postcode, placeholder='Postcode')
-                div.col-md-4
+                .col-md-4
                     label Country
                     input.form-control(type='text', value= data.user.location.country, placeholder='Country')
-            form.form-group.row
-                div.col-md-2
+            .row
+                .col-md-2
                     label Birthday
                     input.form-control(type='date', value= data.user.birthday.toLocaleDateString())
-            form.form-group.row
-                div.col-md-7
+            .row
+                .col-md-7
                     label Sex
                     select.form-control
                         option(selected='') #{data.user.sex}
-            form.form-group.row
-                div.col-md-3
+            .row
+                .col-md-3.col-md-offset-1
                     label Permissions
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isElearningAdmin)
                         | Can Access Elearning Admin
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isElearningUser)
                         | Can Access Elearning User
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isPostsAdmin)
                         | Can access Posts Admin
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isContentsAdmin)
                         | Can access Contents Admin
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isPagesAdmin)
                         | Can access Pages Admin
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isUsersAdmin)
                         | Can access Users Admin
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isAnalyticsAdmin)
                         | Can access Analytics Admin
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isCommunityAdmin)
                         | Can access Community Admin
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isPublicationsAdmin)
                         | Can access Publications Admin
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isPublicationsUser)
                         | Can access Publications Admin
-                    div.checkbox
+                    .checkbox
                         input(type='checkbox' checked= data.user.isCategoriesAdmin)
                         | Can access Categories Admin
-            form.form-group.row
-                div.col-md-7
+            .row
+                .col-md-7
                     h4 Backlog
                     label Need Reviewing
                     select.form-control
