--- a/templates/views/admin/publications.jade
+++ b/templates/views/admin/publications.jade
@@ -19,7 +19,7 @@ block content
                                 h3 No data
                     if data.path === '/admin/publications'
                         if data.publications
-                            tr
+                            tr  
                                 th Title
                                 th Publication Line
                                 th Publication Type
@@ -41,4 +41,30 @@ block content
                             else
                                 .jumbotron
                                     h3 No data
-                
+                    if data.path === '/admin/publication-lines'
+                        tr
+                                th Name
+                            tbody
+                            each pub in data.publication_lines
+                                tr   
+                                    td 
+                                        a(href='#') #{pub.name}
+
+                            else
+                                .jumbotron
+                                    h3 No data
+                    if data.path === '/admin/publication-feedback'
+                        tr
+                            th Title
+                            th User
+                            th createdAt
+                        tbody
+                        each pub in data.publication_feedback
+                            tr
+                                td
+                                    a(href='#') #{pub.title}
+                                td #{pub.user}
+                                td #{pub.createdAt}
+                        else
+                            .jumbotron
+                                h3 No Feedback
