--- a/templates/views/admin/learning_content_view.jade
+++ b/templates/views/admin/learning_content_view.jade
@@ -5,7 +5,7 @@ block content
         .col-sm-9.col-sm-offset-3.col-md-9.col-md-offset-3.main
             form.form-group.row(method='post')
                 input(type='hidden', name= 'action', value='editLearningContent')
-                form.form-group.row
+                .row
                     .col-md-7
                         input.form-control.input-lg(type='text', value= data.learning_contents.title, placeholder='First name')
                 h5.help-block #{'ID: '+data.learning_contents._id}
