--- a/templates/views/eresources/analytics/dashboard.jade
+++ b/templates/views/eresources/analytics/dashboard.jade
@@ -1,4 +1,4 @@
-extends ../../../layouts/eresources
+extends ../../../layouts/eresources-analytics
 
 block content
   #public-content
@@ -47,6 +47,13 @@ block content
           .col-md-12
             .panel.panel-default
               .panel-heading
+                h3.panel-title Downloads &amp; Feedback
+              .panel-body
+                #downloads-chart(style="mid-width: 400px; max-width: 100%; height: 400px; margin: 0 auto;")
+
+          .col-md-12
+            .panel.panel-default
+              .panel-heading
                 h3.panel-title Custom Reports
               .panel-body
                 ul.list-group
@@ -58,3 +65,6 @@ block content
                     a(href='/eresources/reports/feedback') Publication Feedback by Title
                   li.list-group-item
                     a(href='/eresources/reports/feedback-all') All Publication Feedback
+
+block js
+  script(src='/js/eresources/dashboard.js')
