--- a/templates/views/admin/publication_profile.jade
+++ b/templates/views/admin/publication_profile.jade
@@ -78,15 +78,15 @@ block content
                 .row
                     .col-md-7
                         label Format
-                        input.form-control(type='text', value= data.publications.printer)
+                        input.form-control(type='text', value= data.publications.format)
                 .row
                     .col-md-7
                         label Number of pages
-                        input.form-control(type='text', value= data.publications.printer)
+                        input.form-control(type='text', value= data.publications.numberOfPages)
                 .row
                     .col-md-7
                         label Price
-                        input.form-control(type='text', value= data.publications.printer)
+                        input.form-control(type='text', value= data.publications.price)
                 .row
                     .col-md-1
                         label Downloads
