--- a/templates/views/admin/user_profile.jade
+++ b/templates/views/admin/user_profile.jade
@@ -2,33 +2,33 @@ extends ../../layouts/admin-default
 
 block content
 
-    .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
+    .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-3.main
         h2 #{data.user.name.first + ' ' + data.user.name.last}
         p.help-block #{'ID: '+data.user._id}
         br
-        form.form-group.row(method="post")
-            //-input(type='hidden', name= 'action', value='editProfile')
+        form.row(method="post")
+                    //-input(type='hidden', name= 'action', value='editProfile')
             .row
                 .col-md-3               
-                    label First Name :
+                    label First Name
                     input.form-control(type='text', value= data.user.name.first, placeholder='First name')
                 .col-md-4
                     label Last Name :    
                     input.form-control(type='text', value= data.user.name.last, placeholder='Last name')
             .row
                 .col-md-7
-                    label Email :
+                    label Email
                     input.form-control(type='text', value= data.user.email, placeholder='Email')
             .row
                 .col-md-5
-                    label Password :
+                    label Password
                     button.btn.btn-primary(type='submit') Change Password
-            label.custom-file Photo :
+            
+            label.custom-file Photo
                 input#file.custom-file-input(type='file')
                 span.custom-file-control
-            
-            h3 Elearning
             .row
+                h3 Elearning
                 .col-md-7
                     label Learning Objects Taken
                     select.form-control
@@ -67,8 +67,9 @@ block content
                     select.form-control
                         option(selected='') #{data.user.sex}
             .row
-                .col-md-3.col-md-offset-1
+                .col-md-1
                     label Permissions
+                .col-md-3
                     .checkbox
                         input(type='checkbox' checked= data.user.isElearningAdmin)
                         | Can Access Elearning Admin
@@ -113,4 +114,5 @@ block content
                             option(selected='') Select...
                         each pub,i in data.publications
                             option(value=i) #{pub.title}
-            button.btn.btn-primary(type='submit') Save
+            button.btn.btn-primary(type='submit') Save           
+                
