--- a/templates/views/admin/elearning.jade
+++ b/templates/views/admin/elearning.jade
@@ -123,4 +123,24 @@ block content
                         else
                             .jumbotron
                                     h3 No data
+            if data.path === '/admin/lofile-uploads'
+                input.form-control(type='text', placeholder='Search..')
+                button.btn.btn-success(type='button') Create LOFile Upload
+                .table-responsive   
+                    table.table.table-striped
+                        thead
+                        tr
+                            th Name
+                            th Created Time Stamp
+                            th File Type
+                        tbody
+                        each lofile in data.lofile_uploads
+                            tr
+                                td 
+                                    a(href='/admin/lofile-uploads/'+ lofile._id) #{lofile.name}
+                                td #{lofile.createdTimeStamp}
+                                td #{lofile.fileType}
+                        else
+                            .jumbotron
+                                    h3 No data
             
