--- a/templates/views/admin/learningContent_profile.jade
+++ b/templates/views/admin/learningContent_profile.jade
@@ -45,4 +45,4 @@ block content
                         label Updated At
                     .col-md-2
                         mark #{data.learning_contents.publishedAt}
-
+                button.btn.btn-primary(type='submit') Save
