--- a/templates/views/admin/users.jade
+++ b/templates/views/admin/users.jade
@@ -3,22 +3,27 @@ extends ../../layouts/admin-default
 block content
     .row
         .col-sm-9.col-sm-offset-3.col-md-9.col-md-offset-2.main
-            input.form-control(type='text', placeholder='Search..')
-            button.btn.btn-success(type='button') Create User
-            .table-responsive   
-                table.table.table-striped
-                    thead
-                    tr
-                        th Name
-                        th Email
-                        th Can access keystone
-                    tbody
-                    each user in data.users
-                        tr   
-                            td 
-                                a(href='/admin/users/' + user._id) #{user.name.first +' '+ user.name.last}
-                            td #{user.email}
-                            td #{user.canAccessKeystone}
-                    else
-                        .jumbotron
-                            h3 No data
+            if data.users.length > 0
+                .row
+                    .col-md-6
+                        input.form-control(type='text', placeholder='Search..')
+                    .col-md-2
+                        button.btn.btn-success(type='button') Create User 
+                .table-responsive   
+                    table.table.table-striped
+                        thead
+                        tr
+                            th Name
+                            th Email
+                            th Can access keystone
+                        tbody
+                        each user in data.users
+                            tr   
+                                td 
+                                    a(href='/admin/users/' + user._id) #{user.name.first +' '+ user.name.last}
+                                td #{user.email}
+                                td #{user.canAccessKeystone}
+            else
+                .jumbotron
+                    h3 No User found
+                    button.btn.btn-success(type='button') Create User
