--- a/templates/views/admin/elearning.jade
+++ b/templates/views/admin/elearning.jade
@@ -256,7 +256,7 @@ block content
                         h3 No LOVideo found
                         button.btn.btn-success(type='button') Create LOVideo
             if data.path === '/admin/authors'
-                if data.lovideos.length > 0
+                if data.authors.length > 0
                     .row
                         .col-md-6
                             input.form-control(type='text', placeholder='Search..')
@@ -279,3 +279,59 @@ block content
                     .jumbotron
                         h3 No Author found
                         button.btn.btn-success(type='button') Create Author
+            if data.path === '/admin/locomments'
+                if data.locomments.length > 0
+                    .row
+                        .col-md-6
+                            input.form-control(type='text', placeholder='Search..')
+                        .col-md-2
+                            button.btn.btn-success(type='button') Create LOComment
+                    .table-responsive   
+                        table.table.table-striped
+                            thead
+                            tr
+                                th Learning Object
+                                th CreatedBy
+                                th Content
+                                th CreatedAt
+                            tbody
+                            each locomment in data.locomments
+                                tr
+                                    td 
+                                        a(href='/admin/locomments/'+ locomment._id) #{locomment.learningObject}
+                                    td #{locomment.createdBy}
+                                    td #{locomment.content}
+                                    td #{locomment.createdAt}
+
+                else
+                    .jumbotron
+                        h3 No LOComment found
+                        button.btn.btn-success(type='button') Create LOComment
+            if data.path === '/admin/lofeedbacks'
+                if data.lofeedbacks.length > 0
+                    .row
+                        .col-md-6
+                            input.form-control(type='text', placeholder='Search..')
+                        .col-md-2
+                            button.btn.btn-success(type='button') Create LOFeedback
+                    .table-responsive   
+                        table.table.table-striped
+                            thead
+                            tr
+                                th Name
+                                th Email
+                                th Enquiry Type
+                                th CreatedAt
+                            tbody
+                            each lofeedback in data.lofeedbacks
+                                tr
+                                    td 
+                                        a(href='/admin/lofeedbacks/'+ lofeedback._id) #{lofeedback.name}
+                                    td #{lofeedback.email}
+                                    td #{lofeedback.enquiryType}
+                                    td #{lofeedback.createdAt}
+
+                else
+                    .jumbotron
+                        h3 No LOFeedback found
+                        button.btn.btn-success(type='button') Create LOFeedback
